<resources>
    <string name="app_name">SellIT</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_create">Create Advertisement</string>
    <string name="menu_exit">Exit</string>
    <string name="login_text">Sign in</string>
    <string name="register_text">Sign up</string>
    <string name="app_name_text">SellIt</string>
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="user_first_name">First name</string>
    <string name="user_last_name">Last name</string>
    <string name="text_sign_up">Do you have an account? If not, Sign Up</string>
    <string name="text_guest_user">Login as guest</string>
    <string name="language">Language</string>
    <string name="english_language">English</string>
    <string name="hungarian_language">Magyar</string>
    <string name="remember_me">Remember me</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_item">Save</string>
    <string name="column_number">Column number</string>
    <string name="portrait_column">Portrait column number</string>
    <string name="landscape_column">Landscape column number</string>
    <string name="restart_needed">In order to change the application language, it needs to be restarted. Do you agree? </string>
    <string name="log_out">Log out</string>
    <string name="transaction_failed">Transaction failed!</string>
    <string name="press_again">Press again to exit!</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_success">Success!</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="invalid_id">Invalid identifier!</string>
    <string name="advertisement_title">Title</string>
    <string name="advertisement_description">Description</string>
    <string name="advertisement_price">Price  (Lej)</string>
    <string name="advertisement_price_text">Price</string>
    <string name="advertisement_manufacturer">Manufacturer</string>
    <string name="advertisement_owner">Seller</string>
    <string name="advertisement_megapixel">Megapixel</string>
    <string name="advertisement_battery_size">Battery size</string>
    <string name="advertisement_screen_size">Screen size</string>
    <string name="advertisement_cpu">Processor</string>
    <string name="advertisement_memory">Memory</string>
    <string name="advertisement_storage">Storage</string>
    <string name="advertisement_usb_type">Usb type</string>
    <string name="advertisement_model">Model</string>
    <string name="advertisement_jack">Audio Jack port</string>
    <string name="advertisement_primary_camera">Primary camera</string>
    <string name="advertisement_secondary_camera">Secondary camera</string>
    <string name="advertisement_usb_number">Number of USB ports</string>
    <string name="advertisement_dvd_rom">DVD ROM</string>
    <string name="advertisement_horse_power">Horse power</string>
    <string name="advertisement_color">Color</string>
    <string name="advertisement_production_year">Production year</string>
    <string name="advertisement_engine_type">Engine type</string>
    <string name="advertisement_engine_size">Engine size</string>
    <string name="advertisement_tire_size">Tire size</string>
    <string name="advertisement_door_number">Door number</string>
    <string name="advertisement_select_category">Select category</string>
    <string name="advertisement_choose_item">Choose something</string>
    <string name="advertisement_other_type">Others</string>
    <string name="advertisement_car_type">Car</string>
    <string name="advertisement_mobile_type">Mobile phone</string>
    <string name="advertisement_laptop_type">Laptop</string>
    <string name="advertisement_camera_type">Camera</string>
    <string name="advertisement_vehicles">Vehicles</string>
    <string name="advertisement_electronics">Electronics</string>
    <string name="advertisement_all">All category</string>
    <string name="price_free">Free</string>
    <string name="advertisement_no_images">No image available!</string>
    <string name="advertisement_upload_success">Successfully uploaded an advertisement!</string>
    <string name="advertisement_upload_failed">Upload failed successfully!</string>

</resources>
