<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LoginFragment">

    <TextView
        android:id="@+id/app_title_text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name_text"
        android:textColor="@color/colorRed"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_email_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_item_height"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/item_rounded_background"
        android:hint="@string/user_email"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title_text" />

    <EditText
        android:id="@+id/user_first_name_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_item_height"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/item_rounded_background"
        android:hint="@string/user_first_name"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_field" />

    <EditText
        android:id="@+id/user_last_name_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_item_height"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/item_rounded_background"
        android:hint="@string/user_last_name"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_first_name_field" />

    <EditText
        android:id="@+id/user_name_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_item_height"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/item_rounded_background"
        android:hint="@string/user_name"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_last_name_field" />

    <EditText
        android:id="@+id/user_password_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_item_height"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/item_rounded_background"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_field" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_item_height"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/item_rounded_background"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:stateListAnimator="@drawable/item_click_animator"
        android:text="@string/register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_password_field" />

</androidx.constraintlayout.widget.ConstraintLayout>